[package]
name = "tiny-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true        # Strip symbols from binary*
opt-level = "z"  # 最小化二进制文件大小

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "relocation-model=static"
]

