[package]
name = "tiny-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6"
actix-web-httpauth = "0.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.202", features = ["derive"] }
md5 = "0.7.0"
serde_json = "1.0"
chrono = "0.4"
log = "0.4.21"
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio"] }
regex = "1.10.4"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true        # Strip symbols from binary*
opt-level = "z"  # 最小化二进制文件大小

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "relocation-model=static"
]

